deploy/k8s/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: element-postgres
spec:
  ports:
    - port: 5432
  selector:
    app: element-postgres
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: element-postgres
spec:
  selector:
    matchLabels:
      app: element-postgres
  template:
    metadata:
      labels:
        app: element-postgres
    spec:
      containers:
      - name: postgres
        image: postgres:16-alpine
        ports:
        - containerPort: 5432
