deploy/k8s/shipment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shipment-service
spec:
  ports:
    - port: 8080
  selector:
    app: shipment-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipment-service
spec:
  selector:
    matchLabels:
      app: shipment-service
  template:
    metadata:
      labels:
        app: shipment-service
    spec:
      containers:
      - name: shipment-service
        image: element-shipment-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
